LRP-4991 continue debugging of the license.jar